sample-ingress-new.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foo
  annotations:
    kubernetes.io/ingress.class: traefik
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: nginx.ravindra.tech
      http:
        paths:
          - backend:
              service:
                name: app-service
                port:
                  number: 80
            pathType: Prefix
            path: /
